Fix search button on mobile resolution

--- a/public/css/layout-basic.css
+++ b/public/css/layout-basic.css
@@ -155,6 +155,10 @@ nav:after {
     align-self: stretch;
 }
 
+#mobileSearch button {
+    padding: 6px 8px;
+}
+
 #leftHeaderButton.custom-info,
 #rightHeaderButton.custom-info {
     font-weight: 500;
